--- a/package.json
+++ b/package.json
@@ -1,16 +1,17 @@
 {
-    "name": "vue-app",
-    "version": "1.0.0",
-    "type": "module",
-    "scripts": {
-        "dev": "vite",
-        "build": "vite build",
-        "preview": "vite preview"
-    },
+  "name": "imagex",
+  "version": "1.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
+  },
   "dependencies": {
+    "@flaticon/flaticon-uicons": "^3.3.1",
+    "@mdi/font": "^7.4.47",
     "vue": "^3.4.21",
-    "vuetify": "^3.5.10",
-    "@mdi/font": "^7.4.47"
+    "vuetify": "^3.5.10"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
